--- a/chkiearea/ChkIEArea.csproj
+++ b/chkiearea/ChkIEArea.csproj
@@ -151,6 +151,12 @@
     <Content Include="f\動作チェック用テストデータ.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="f\動作チェック用テストデータ.dxf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="f\動作チェック用テストデータ.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\PlayHS.png" />
     <None Include="Resources\ZoomHS.png" />
     <None Include="Resources\PrintPreviewHS.png" />
