--- a/chkiearea/ChkIEArea.csproj
+++ b/chkiearea/ChkIEArea.csproj
@@ -98,6 +98,10 @@
       <SubType>Designer</SubType>
       <DependentUpon>SelAppForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ViewForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>ViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
@@ -134,12 +138,24 @@
     <Compile Include="SelAppForm.Designer.cs">
       <DependentUpon>SelAppForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ViewForm.Designer.cs">
+      <DependentUpon>ViewForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="f\動作チェック用テストデータ.htm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="f\動作チェック用テストデータ.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="f\動作チェック用テストデータ.tif">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="f\動作チェック用テストデータ.tiff">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="f\動作チェック用テストデータ.txt">
