--- a/trunk/chkiearea/ChkIEArea.csproj
+++ b/trunk/chkiearea/ChkIEArea.csproj
@@ -173,6 +173,9 @@
     <Content Include="f\動作チェック用テストデータ.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="f\動作チェック用テストデータ.pptx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\PlayHS.png" />
     <None Include="Resources\ZoomHS.png" />
     <None Include="Resources\PrintPreviewHS.png" />
