--- a/chkiearea/ChkIEArea.csproj
+++ b/chkiearea/ChkIEArea.csproj
@@ -13,10 +13,10 @@
     <ManifestCertificateThumbprint>ED561E7929ABC836B4F90076EEE8BE3991808DBE</ManifestCertificateThumbprint>
     <ManifestKeyFile>ChkIEArea_TemporaryKey.pfx</ManifestKeyFile>
     <GenerateManifests>true</GenerateManifests>
-    <SignManifests>true</SignManifests>
-    <PublishUrl>\\Dd7\dd作業用データ\HDDfiles\ChkIEArea\</PublishUrl>
+    <SignManifests>false</SignManifests>
+    <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Unc</InstallFrom>
+    <InstallFrom>Disk</InstallFrom>
     <UpdateEnabled>false</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
@@ -27,8 +27,6 @@
     <TargetCulture>ja-JP</TargetCulture>
     <ProductName>ChkIEArea</ProductName>
     <PublisherName>枚岡合金工具株式会社</PublisherName>
-    <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
-    <WebPage>publish.htm</WebPage>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
     <ApplicationVersion>1.0.5.%2a</ApplicationVersion>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -83,11 +81,21 @@
     <Compile Include="CForm.Designer.cs">
       <DependentUpon>CForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="EdREGForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EdREGForm.Designer.cs">
+      <DependentUpon>EdREGForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CForm.resx">
       <SubType>Designer</SubType>
       <DependentUpon>CForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EdREGForm.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>EdREGForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -119,7 +127,6 @@
     <Content Include="f\動作チェック用テストデータ.pdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="ChkIEArea_TemporaryKey.pfx" />
     <Content Include="f\動作チェック用テストデータ.ppt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -185,6 +192,9 @@
     <None Include="Resources\PlayHS.png" />
     <None Include="Resources\ZoomHS.png" />
     <None Include="Resources\PrintPreviewHS.png" />
+    <Content Include="Resources\Folder_16x16.png" />
+    <Content Include="Resources\Gear.png" />
+    <Content Include="Resources\PropertiesHS.png" />
     <Content Include="wip.png" />
   </ItemGroup>
   <ItemGroup>
