MIME修正案、図化、動的化。 OOo対応。

--- a/chkiearea/ChkIEArea.csproj
+++ b/chkiearea/ChkIEArea.csproj
@@ -199,9 +199,13 @@
     <Content Include="f\動作チェック用テストデータ.pptx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="ooo341.reg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\PlayHS.png" />
     <None Include="Resources\ZoomHS.png" />
     <None Include="Resources\PrintPreviewHS.png" />
+    <Content Include="Resources\DeleteFolderHS.png" />
     <Content Include="Resources\Folder_16x16.png" />
     <Content Include="Resources\Gear.png" />
     <Content Include="Resources\PropertiesHS.png" />
