--- a/chkiearea/ChkIEArea.csproj
+++ b/chkiearea/ChkIEArea.csproj
@@ -158,6 +158,9 @@
     <Content Include="f\動作チェック用テストデータ.dwg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="f\動作チェック用テストデータ.xdw">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
